Implement authenticated WebSocket realtime signaling